# copilot-snake

./: README.md  index.html
snake/: Cargo.toml
snake/src/: main.rs
