[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
rand = "0.8.4"
actix-web = "4.3.0"
actix-cors = "0.6.4"
http = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }